// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchRecipient should not render if not open 1`] = `<DocumentFragment />`;

exports[`SearchRecipient should render a modal 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 eeiXFd"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Select Recipient
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Find and select a recipient from your contacts and wallets
            </div>
            <div
              class="mt-8"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Wallet Address
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                          >
                            <div
                              class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Type
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                          >
                            <div
                              class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top justify-end no-border"
                        >
                          <div>
                            <div
                              class="relative"
                              data-testid="HeaderSearchBar"
                            >
                              <div
                                class="group"
                              >
                                <button
                                  class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 enxoho ring-focus"
                                  type="button"
                                >
                                  <div
                                    class="flex items-center space-x-3 h-5"
                                  >
                                    <span>
                                      Search
                                    </span>
                                    <div
                                      class="sc-bdvvtL qGXhc"
                                      height="20"
                                      width="20"
                                    >
                                      <svg>
                                        magnifying-glass.svg
                                      </svg>
                                    </div>
                                  </div>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
                        >
                          <span
                            data-testid="RecipientListItem__type"
                          >
                            My Wallet
                          </span>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                            data-testid="RecipientListItem__select-button-0"
                            type="button"
                          >
                            <div
                              class="flex items-center space-x-2"
                            >
                              Select
                            </div>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 2
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
                        >
                          <span
                            data-testid="RecipientListItem__type"
                          >
                            My Wallet
                          </span>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                            data-testid="RecipientListItem__select-button-1"
                            type="button"
                          >
                            <div
                              class="flex items-center space-x-2"
                            >
                              Select
                            </div>
                          </button>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchRecipient should render a modal with custom title and description 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 eeiXFd"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Modal title
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Modal description
            </div>
            <div
              class="mt-8"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Wallet Address
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                          >
                            <div
                              class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Type
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                          >
                            <div
                              class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top justify-end no-border"
                        >
                          <div>
                            <div
                              class="relative"
                              data-testid="HeaderSearchBar"
                            >
                              <div
                                class="group"
                              >
                                <button
                                  class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 enxoho ring-focus"
                                  type="button"
                                >
                                  <div
                                    class="flex items-center space-x-3 h-5"
                                  >
                                    <span>
                                      Search
                                    </span>
                                    <div
                                      class="sc-bdvvtL qGXhc"
                                      height="20"
                                      width="20"
                                    >
                                      <svg>
                                        magnifying-glass.svg
                                      </svg>
                                    </div>
                                  </div>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
                        >
                          <span
                            data-testid="RecipientListItem__type"
                          >
                            My Wallet
                          </span>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                            data-testid="RecipientListItem__select-button-0"
                            type="button"
                          >
                            <div
                              class="flex items-center space-x-2"
                            >
                              Select
                            </div>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 2
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
                        >
                          <span
                            data-testid="RecipientListItem__type"
                          >
                            My Wallet
                          </span>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                            data-testid="RecipientListItem__select-button-1"
                            type="button"
                          >
                            <div
                              class="flex items-center space-x-2"
                            >
                              Select
                            </div>
                          </button>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchRecipient should render with selected address 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 eeiXFd"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Select Recipient
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Find and select a recipient from your contacts and wallets
            </div>
            <div
              class="mt-8"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Wallet Address
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                          >
                            <div
                              class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Type
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                          >
                            <div
                              class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top justify-end no-border"
                        >
                          <div>
                            <div
                              class="relative"
                              data-testid="HeaderSearchBar"
                            >
                              <div
                                class="group"
                              >
                                <button
                                  class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 enxoho ring-focus"
                                  type="button"
                                >
                                  <div
                                    class="flex items-center space-x-3 h-5"
                                  >
                                    <span>
                                      Search
                                    </span>
                                    <div
                                      class="sc-bdvvtL qGXhc"
                                      height="20"
                                      width="20"
                                    >
                                      <svg>
                                        magnifying-glass.svg
                                      </svg>
                                    </div>
                                  </div>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
                        >
                          <span
                            data-testid="RecipientListItem__type"
                          >
                            My Wallet
                          </span>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 IWDiW"
                            data-testid="RecipientListItem__selected-button-0"
                            type="button"
                          >
                            <div
                              class="flex items-center space-x-2"
                            >
                              Selected
                            </div>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                          <div
                            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                          >
                            <span
                              class="font-semibold text-base text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 2
                              </span>
                            </span>
                            <span
                              class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
                        >
                          <span
                            data-testid="RecipientListItem__type"
                          >
                            My Wallet
                          </span>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
                        >
                          <button
                            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                            data-testid="RecipientListItem__select-button-1"
                            type="button"
                          >
                            <div
                              class="flex items-center space-x-2"
                            >
                              Select
                            </div>
                          </button>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
